Update Customer.java
Fixed peeking and polling maintenance list